# kaspersky-task

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AppConsole/: CMakeLists.txt  appconsole.cpp  appconsole.hpp
DataBase/: CMakeLists.txt  database.cpp  database.hpp
Logger/: CMakeLists.txt  logger.cpp  logger.hpp
Scaner/: CMakeLists.txt  scaner.cpp  scaner.hpp
data/: base.csv
